--- a/i18n/en.toml
+++ b/i18n/en.toml
@@ -95,7 +95,7 @@ other = "Overview"
 other = "Pinned"
 
 [nojs-message]
-other = "This page looks best with JavaScript enabled"
+other = ""
 
 [posts-by-order]
 other = "TOP POSTS"
